ui alignment and user name issue

--- a/src/main/resources/static/app.css
+++ b/src/main/resources/static/app.css
@@ -12,6 +12,14 @@ color: #9d9d9d;
 	color:#eeba37 !important;
 }
 
+#firstLine{
+	font-size:30px;
+	font-style: italic;
+}
+
+#secondLine {
+	font-size:25px;
+}
 /* Sticky Footer CSS*/
 /* Sticky footer styles
 -------------------------------------------------- */
